--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
     }
   ],
   "require": {
-    "php": "^5.6 || ^7.0",
+    "php": "^7.1",
     "psr/http-message": "^1.0",
     "container-interop/container-interop": "^1.1",
     "zendframework/zend-servicemanager": "^3.0",
-    "dotkernel/dot-event": "0.6.x-dev"
+
+    "dotkernel/dot-event": "dev-develop as 0.6.x-dev"
   },
   "require-dev": {
     "zendframework/zend-expressive-template": "^1.0",
