--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
     }
   ],
   "require": {
-    "php": "^5.6 || ^7.0",
+    "php": "^7.1",
     "psr/http-message": "^1.0",
     "container-interop/container-interop": "^1.1",
-    "zendframework/zend-servicemanager": "^3.0"
+    "zendframework/zend-servicemanager": "^3.0",
+
+    "dotkernel/dot-event": "~0.1"
   },
   "require-dev": {
     "zendframework/zend-expressive-template": "^1.0",
@@ -34,7 +36,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.6-dev"
+      "dev-master": "0.2-dev"
     }
   }
 }
