--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
   "require": {
     "php": "^7.1",
     "psr/http-message": "^1.0",
-    "container-interop/container-interop": "^1.1",
-    "zendframework/zend-servicemanager": "^3.0",
+    "http-interop/http-middleware": "^0.4.1",
+    "zendframework/zend-servicemanager": "^3.3.0",
 
-    "dotkernel/dot-event": "^0.1"
+    "dotkernel/dot-event": "^0.2"
   },
   "require-dev": {
     "zendframework/zend-expressive-template": "^1.0",
-    "zendframework/zend-expressive-helpers": "^2.0",
+    "zendframework/zend-expressive-helpers": "^3.0",
 
     "phpunit/phpunit": "^4.8",
     "squizlabs/php_codesniffer": "^2.3"
@@ -36,7 +36,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.2-dev"
+      "dev-master": "0.2-dev",
+      "dev-develop": "0.3-dev"
     }
   }
 }
