--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "n3vrax",
-      "email": "tibi@apidemia.com"
+      "name": "dotkernel",
+      "email": "team@dotkernel.com"
     }
   ],
   "require": {
@@ -36,8 +36,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.3-dev",
-      "dev-develop": "0.4-dev"
+      "dev-master": "1.0-dev",
+      "dev-develop": "1.1-dev"
     }
   }
 }
