--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,41 @@
 {
-  "name": "dotkernel/dot-controller",
-  "type": "library",
-  "description": "DotKernel controller like middleware component with plugin support",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "dotkernel",
-      "email": "team@dotkernel.com"
+    "name": "dotkernel/dot-controller",
+    "type": "library",
+    "description": "DotKernel controller like middleware component with plugin support",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "dotkernel",
+            "email": "team@dotkernel.com"
+        }
+    ],
+    "require": {
+        "php": "^7.2",
+        "psr/http-message": "^1.0",
+        "laminas/laminas-servicemanager": "^3.3.0",
+        "dotkernel/dot-event": "^2.0",
+        "laminas/laminas-dependency-plugin": "^1.0"
+    },
+    "require-dev": {
+        "mezzio/mezzio-template": "^1.0",
+        "mezzio/mezzio-helpers": "^4.0",
+        "phpunit/phpunit": "^4.8",
+        "squizlabs/php_codesniffer": "^2.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Dot\\Controller\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "DotTest\\Controller\\": "test/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0-dev",
+            "dev-develop": "2.1-dev"
+        }
     }
-  ],
-  "require": {
-    "php": "^7.1",
-    "psr/http-message": "^1.0",
-    "zendframework/zend-servicemanager": "^3.3.0",
-
-    "dotkernel/dot-event": "^0.2"
-  },
-  "require-dev": {
-    "zendframework/zend-expressive-template": "^1.0",
-    "zendframework/zend-expressive-helpers": "^4.0",
-
-    "phpunit/phpunit": "^4.8",
-    "squizlabs/php_codesniffer": "^2.3"
-  },
-  "autoload": {
-    "psr-4": {
-      "Dot\\Controller\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "DotTest\\Controller\\": "test/"
-    }
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "1.0-dev",
-      "dev-develop": "1.1-dev"
-    }
-  }
 }
