--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,13 @@
     "type": "library",
     "description": "DotKernel controller like middleware component with plugin support",
     "license": "MIT",
+    "keywords": [
+        "controller",
+        "plugin",
+        "laminas",
+        "mezzio",
+        "service-manager"
+    ],
     "authors": [
         {
             "name": "dotkernel",
@@ -10,17 +17,17 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.4",
         "psr/http-message": "^1.0",
-        "laminas/laminas-servicemanager": "^3.3.0",
-        "dotkernel/dot-event": "^2.0",
+        "laminas/laminas-servicemanager": "^3.4",
+        "dotkernel/dot-event": "^3.0",
         "laminas/laminas-dependency-plugin": "^1.0"
     },
     "require-dev": {
-        "mezzio/mezzio-template": "^1.0",
-        "mezzio/mezzio-helpers": "^4.0",
-        "phpunit/phpunit": "^4.8",
-        "squizlabs/php_codesniffer": "^2.3"
+        "mezzio/mezzio-template": "^2.0",
+        "mezzio/mezzio-helpers": "^5.3",
+        "phpunit/phpunit": "^9.1",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
