--- a/composer.json
+++ b/composer.json
@@ -18,17 +18,17 @@
         }
     ],
     "require": {
-        "php": "^7.4",
-        "psr/http-message": "^1.0",
-        "laminas/laminas-servicemanager": "^3.4",
-        "dotkernel/dot-event": "^3.0",
-        "laminas/laminas-dependency-plugin": "^2.0"
+        "php": "^7.4 || ~8.0 || ~8.1",
+        "psr/http-message": "^1.0.1",
+        "laminas/laminas-servicemanager": "^3.11.2",
+        "dotkernel/dot-event": "^3.2.0",
+        "laminas/laminas-dependency-plugin": "^2.2.0"
     },
     "require-dev": {
-        "mezzio/mezzio-template": "^2.0",
-        "mezzio/mezzio-helpers": "^5.3",
-        "phpunit/phpunit": "^9.1",
-        "squizlabs/php_codesniffer": "^3.5"
+        "mezzio/mezzio-template": "^2.4.0",
+        "mezzio/mezzio-helpers": "^5.8.0",
+        "phpunit/phpunit": "^9.5.20",
+        "squizlabs/php_codesniffer": "^3.6.2"
     },
     "autoload": {
         "psr-4": {
