--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         "php": "^7.4 || ~8.0.0 || ~8.1.0",
         "psr/http-message": "^1.0.1",
         "laminas/laminas-servicemanager": "^3.11.2",
-        "dotkernel/dot-event": "^3.2.0",
-        "laminas/laminas-dependency-plugin": "^2.2.0"
+        "dotkernel/dot-event": "^3.2.0"
     },
     "require-dev": {
         "mezzio/mezzio-template": "^2.4.0",
