--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,15 @@
         "php": "~8.1.0 || ~8.2.0",
         "psr/http-message": "^1.0.1",
         "laminas/laminas-servicemanager": "^3.11.2",
-        "dotkernel/dot-event": "^3.2.0"
+        "dotkernel/dot-event": "^3.2.0",
+        "mezzio/mezzio-template": "^2.4.0",
+        "mezzio/mezzio-helpers": "^5.8.0"
     },
     "require-dev": {
-        "mezzio/mezzio-template": "^2.4.0",
-        "mezzio/mezzio-helpers": "^5.8.0",
         "phpunit/phpunit": "^10.2",
         "vimeo/psalm": "^5.13",
-        "laminas/laminas-coding-standard": "^2.5"
+        "laminas/laminas-coding-standard": "^2.5",
+        "laminas/laminas-diactoros": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -52,6 +53,7 @@
         "static-analysis": "psalm --shepherd --stats"
     },
     "config": {
+        "sort-packages": true,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
