--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "~8.1.0 || ~8.2.0",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
         "psr/http-message": "^1.0 || ^2.0",
         "laminas/laminas-servicemanager": "^3.11.2",
         "dotkernel/dot-event": "^3.2.0",
